<resources>
    <string name="app_name">BMICalculation</string>
    <string name="tvName">TextView</string>
    <string name="btnEnter">Button</string>
    <string name="tvname">Name</string>
    <string name="name">Name</string>
    <string name="enter">Enter</string>
    <string name="status">Status :</string>
    <string name="height">Height :</string>
    <string name="welcome">Welcome :</string>
    <string name="weight">Weight :</string>
    <string name="calculate">Calculate</string>
    <string name="aaron">Aaron</string>
    <string name="_70_00">70.00</string>
    <string name="_180_00">180.00</string>
</resources>