<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/status"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/tvHeight"
        app:layout_constraintTop_toBottomOf="@+id/tvHeight" />

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:text="@string/height"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/tvWeight"
        app:layout_constraintTop_toBottomOf="@+id/tvWeight" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/welcome"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/weight"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/tvWelcome"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <TextView
        android:id="@+id/tfWelcome"
        android:layout_width="117dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvWelcome"
        app:layout_constraintStart_toEndOf="@+id/tvWelcome"
        app:layout_constraintTop_toTopOf="@+id/tvWelcome"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/tfWeight"
        android:layout_width="119dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:autofillHints=""
        android:hint="@string/_70_00"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/tvWeight"
        app:layout_constraintStart_toEndOf="@+id/tvWeight"
        app:layout_constraintTop_toTopOf="@+id/tvWeight"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/tfHeight"
        android:layout_width="117dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:autofillHints=""
        android:hint="@string/_180_00"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/tvHeight"
        app:layout_constraintStart_toEndOf="@+id/tvHeight"
        app:layout_constraintTop_toTopOf="@+id/tvHeight"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tfStatus"
        android:layout_width="139dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvStatus"
        app:layout_constraintStart_toEndOf="@+id/tvStatus"
        app:layout_constraintTop_toTopOf="@+id/tvStatus"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="@+id/tfStatus"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="@+id/tvStatus"
        app:layout_constraintTop_toBottomOf="@+id/tfStatus" />

</androidx.constraintlayout.widget.ConstraintLayout>